rpsvr_v0/slurm-30271196.out
f6a47a7b61b5118b792cd54a3b9fc95b
[E 23:48:10.732 NotebookApp] Exception while loading config file /home/jamesmcd/.jupyter_secure/tmp.fhe4nyRhw9.py
    Traceback (most recent call last):
      File "/home/jamesmcd/anaconda3/lib/python3.7/site-packages/traitlets/config/application.py", line 563, in _load_config_files
        config = loader.load_config()
      File "/home/jamesmcd/anaconda3/lib/python3.7/site-packages/traitlets/config/loader.py", line 457, in load_config
        self._read_file_as_dict()
      File "/home/jamesmcd/anaconda3/lib/python3.7/site-packages/traitlets/config/loader.py", line 489, in _read_file_as_dict
        py3compat.execfile(conf_filename, namespace)
      File "/home/jamesmcd/anaconda3/lib/python3.7/site-packages/ipython_genutils/py3compat.py", line 198, in execfile
        exec(compiler(f.read(), fname, 'exec'), glob, loc)
      File "/home/jamesmcd/.jupyter_secure/tmp.fhe4nyRhw9.py", line 1
        c.NotebookApp.token = 'f6a47a7b61b5118b792cd54a3b9fc95b'\nc.NotebookApp.notebook_dir =
                                                                                             ^
    SyntaxError: unexpected character after line continuation character
[I 23:48:11.223 NotebookApp] JupyterLab extension loaded from /home/jamesmcd/anaconda3/lib/python3.7/site-packages/jupyterlab
[I 23:48:11.223 NotebookApp] JupyterLab application directory is /home/jamesmcd/anaconda3/share/jupyter/lab
[I 23:48:11.225 NotebookApp] Serving notebooks from local directory: /home/jamesmcd/jupyternotebook-reverseproxy/rpsvr_v0
[I 23:48:11.225 NotebookApp] The Jupyter Notebook is running at:
[I 23:48:11.225 NotebookApp] http://comet-14-01.local:8888/?token=d0087fd6220db22011b8358a06eb1b2cc8a1d1ac23adbf8d
[I 23:48:11.225 NotebookApp]  or http://127.0.0.1:8888/?token=d0087fd6220db22011b8358a06eb1b2cc8a1d1ac23adbf8d
[I 23:48:11.225 NotebookApp] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).
[C 23:48:11.235 NotebookApp] 
    
    To access the notebook, open this file in a browser:
        file:///home/jamesmcd/.local/share/jupyter/runtime/nbserver-11181-open.html
    Or copy and paste one of these URLs:
        http://comet-14-01.local:8888/?token=d0087fd6220db22011b8358a06eb1b2cc8a1d1ac23adbf8d
     or http://127.0.0.1:8888/?token=d0087fd6220db22011b8358a06eb1b2cc8a1d1ac23adbf8d
   This page should redirect you to Jupyter Notebook. If it doesn't, [1]click
   here to go to Jupyter.

References

   Visible links
   1. http://comet-14-01.local:8888/tree?token=d0087fd6220db22011b8358a06eb1b2cc8a1d1ac23adbf8d
8888
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0100     9  100     9    0     0     67      0 --:--:-- --:--:-- --:--:--    67
Success!
[I 23:57:46.128 NotebookApp] 302 GET / (10.21.3.20) 0.74ms
[I 23:57:46.228 NotebookApp] 302 GET /tree? (10.21.3.20) 0.63ms
